REGRESSION (r169065): Mountain Lion run-api-tests failures: ASSERTION FAILED: Uncaught exception - -[NSRegularLegacyScrollerImp setPresentationValue:]: unrecognized selector sent to instance 0x7ff51aa38000 https://bugs.webkit.org/show_bug.cgi?id=133121

Reviewed by Tim Horton.

* platform/mac/ScrollbarThemeMac.mm:
(WebCore::ScrollbarThemeMac::setPaintCharacteristicsForScrollbar):



Canonical link: https://commits.webkit.org/151151@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169124 268f45cc-cd09-0410-ab3c-d52691b4dbfc